--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trelloclone",
+  "name": "trello-clone",
   "version": "1.0.0",
   "description": "A clone of trello app",
   "main": "server/server.js",
