added drag drop feature for moving cards: need to optmise code

--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
     "jquery": "^3.3.1",
     "node-sass": "^4.11.0",
     "popper.js": "^1.14.7",
     "react": "^16.8.5",
+    "react-dnd": "^4.0.5",
+    "react-dnd-html5-backend": "^4.0.6",
     "react-dom": "^16.8.5",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
