--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "trello-clone",
+  "name": "trello-clone-backend",
   "version": "1.0.0",
-  "description": "A clone of trello app",
-  "main": "server/server.js",
+  "description": "Backend for trello clone",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sabarishv95/trelloClone.git"
-  },
   "author": "Sabarish",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/sabarishv95/trelloClone/issues"
-  },
-  "homepage": "https://github.com/sabarishv95/trelloClone#readme"
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "mongoose": "^5.4.19"
+  }
 }
